kubernetes/manifests/media/qbittorrent/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qbittorrent
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
        app.kubernetes.io/name: qbittorrent
    spec:
      containers:
        - image: ghcr.io/linuxserver/qbittorrent:4.6.7
          imagePullPolicy: IfNotPresent
          name: qbittorrent
          ports:
            - containerPort: 8080
              name: web-tcp
              protocol: TCP
            - containerPort: 8080
              name: web-udp
              protocol: UDP
            - containerPort: 6881
              name: torrent-tcp
              protocol: TCP
            - containerPort: 6881
              name: torrent-udp
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: qbittorrent
              subPath: qbittorrent-config
            - mountPath: '/downloads'
              readOnly: false
              name: smb
      volumes:
        - name: qbittorrent
          persistentVolumeClaim:
            claimName: pvc-qbittorrent
        - name: smb
          persistentVolumeClaim:
            claimName: pvc-media-share
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent
  namespace: media
spec:
  ports:
    - name: web-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: web-udp
      port: 8080
      protocol: UDP
      targetPort: 8080
    - name: torrent-tcp
      port: 6881
      protocol: TCP
      targetPort: 6881
    - name: torrent-udp
      port: 6881
      protocol: UDP
      targetPort: 6881
  selector:
    app: qbittorrent
  type: ClusterIP
  clusterIP: 10.43.157.103
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  tls:
    secretName: home-vijayakumar-xyz
  routes:
    - match: Host(`qbittorrent.home.vijayakumar.xyz`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
      middlewares:
        - name: default-headers
